# AmBe_GeSim_GammaNeutron

./: AmBe.mac  CMakeLists.txt  GeSim.cc  GeSim.in  GeSim.out  README.md  energyspectrum.cc  norm_BR.py  spec_maker.py
data/: 4438_gamma.spectrum  AmBe_SOURCES4A_n0_neutron_normalized.spectrum  AmBe_SOURCES4A_n1_neutron_normalized.spectrum  AmBe_SOURCES4A_n2_neutron_normalized.spectrum  am241be_normalized.spectrum
geometry_vis_example/: AmBe_no_outer_W_capsule_remote.wrl  AmBe_with_outer_W_capsule_on_endcap.wrl  AmBe_with_outer_W_capsule_remote.wrl
include/: gesimAnalysisManager.hh  gesimAnalysisMessenger.hh  gesimDetectorConstruction.hh  gesimDetectorMessenger.hh  gesimEnergyDeposition.hh  gesimEventAction.hh  gesimEventActionMessenger.hh  gesimHisto.hh  gesimHistoMessenger.hh  gesimMaterial.hh  gesimMaterialData.hh  gesimMaterialMessenger.hh  gesimPhysListEmLowEnergy.hh  gesimPhysListHadron.hh  gesimPhysListParticles.hh  gesimPhysicsList.hh  gesimPhysicsListMessenger.hh  gesimPrimaryGeneratorAction.hh  gesimRunAction.hh  gesimSteppingAction.hh
src/: gesimAnalysisManager.cc  gesimAnalysisMessenger.cc  gesimDetectorConstruction.cc  gesimDetectorMessenger.cc  gesimEnergyDeposition.cc  gesimEventAction.cc  gesimEventActionMessenger.cc  gesimHisto.cc  gesimHistoMessenger.cc  gesimMaterial.cc  gesimMaterialMessenger.cc  gesimPhysListEmLowEnergy.cc  gesimPhysListParticles.cc  gesimPhysicsList.cc  gesimPhysicsListMessenger.cc  gesimPrimaryGeneratorAction.cc  gesimPrimaryGeneratorAction.cc_n0n1n2  gesimPrimaryGeneratorAction.cc_n0neutrons  gesimPrimaryGeneratorAction.cc_neutronsandgammas  gesimPrimaryGeneratorAction.cc_no_outer_W_remote  gesimPrimaryGeneratorAction.cc_with_outer_W_on_endcap  gesimPrimaryGeneratorAction.cc_with_outer_W_remote  gesimRunAction.cc  gesimSteppingAction.cc
